# fishing-forecast-gcal

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/instructions/: ai-advanced-patterns.instructions.md  ai-code-examples-reference.instructions.md  ai-code-writing.instructions.md  ai-project-structure-core.instructions.md  ai-project-structure-maintenance.instructions.md  ai-project-structure-ml.instructions.md  ai-pull-request.instructions.md  git-workflow-commit-process.instructions.md  git-workflow-ml-experiments.instructions.md  git-workflow-pr.instructions.md  git-workflow-troubleshooting.instructions.md  git-workflow.instructions.md
.github/workflows/: ci.yml
config/: config.yaml.template
config/harmonics/: README.md
docs/: architecture.md  conversation_gemini.md  data_sources.md  document_index.md  implementation_plan.md  requirements.md  task_table.md  tide_app_comparison.md  tide_graph_image_poc.md  潮位データ：推算値と実測値の違い.md
docs/completed/: issue-101.md  issue-104.md  issue-12.md  issue-13.md  issue-14.md  issue-15.md  issue-16.md  issue-17.md  issue-18.md  issue-19.md  issue-20.md  issue-21.md  issue-22.md  issue-23.md  issue-24.md  issue-46.md  issue-53.md  issue-54.md  issue-55.md  issue-56.md  issue-57.md  issue-58.md  issue-69.md  issue-70.md  issue-76.md  issue-78.md  issue-79.md  issue-80.md  issue-81.md  issue-90.md  issue-91.md  issue-92.md  issue-93.md  issue-98.md  t-0131-station-id-mapping.md
docs/inprogress/: background-calendar-widget.md  issue-104.md  issue-12.md  issue-14.md  issue-18.md  issue-19.md  issue-20.md  issue-22.md  issue-23.md  issue-46.md  issue-56.md  issue-57.md  issue-70.md  issue-76.md  issue-78.md  issue-79.md  issue-80.md  issue-81.md  issue-90.md  issue-92.md  issue-98.md
scripts/: fetch_jma_suisan_tide_data.py  fetch_jma_tide_data.py  poc_tide_graph_image.py  poc_upload_imgur.py
src/fishing_forecast_gcal/presentation/: cli.py  config_loader.py
tests/e2e/: conftest.py  test_sync_tide_flow.py
tests/integration/fixtures/: jma_suisan_TK_2024_11_03.txt
tests/integration/infrastructure/: __init__.py  test_tide_data_repository_integration.py  (+1 more)
tests/support/: __init__.py  jma_suisan_parser.py
(+76 files in other folders)
